EntityNotFoundException added