@@ -5,9 +5,7 @@ import com.example.jvbookstore.dto.CreateBookRequestDto;
 import com.example.jvbookstore.mapper.BookMapper;
 import com.example.jvbookstore.model.Book;
 import com.example.jvbookstore.repository.BookRepository;
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.Random;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -21,7 +19,6 @@ public class BookServiceImpl implements BookService {
     @Override
     public BookDto save(CreateBookRequestDto requestDto) {
         Book book = bookMapper.toModel(requestDto);
-        book.setPrice(BigDecimal.valueOf(new Random().nextInt(100)));
         return bookMapper.toBookDto(bookRepository.save(book));
     }
 
@@ -31,18 +28,11 @@ public class BookServiceImpl implements BookService {
                 .findAll()
                 .stream()
                 .map(bookMapper::toBookDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public BookDto getBookById(Long id) {
         return null;
-    }
-
-    @Override
-    public List<BookDto> getAllByTitle(String title) {
-        return bookRepository.findAllByTitle(title)
-                .stream().map(bookMapper::toBookDto)
-                .collect(Collectors.toList());
     }
 }
